--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,5 @@
     <item name="tv_steps" type="id" />
     <item name="btn_start" type="id" />
     <item name="btn_stop" type="id" />
+    <item name="vunerable" type="id" />
 </resources>
