Added a settings fragment that will soon allow users to logout and change their medical ID information. Fragment is only implemented for newer devices, legacy devices will use buttons.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -4,4 +4,5 @@
     <item name="btn_start" type="id" />
     <item name="btn_stop" type="id" />
     <item name="vunerable" type="id" />
+    <item name="nav_settings" type="id" />
 </resources>
