--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -13,5 +13,9 @@
         android:id="@+id/nav_medical"
         android:icon="@drawable/ic_accessibility_black_24dp"
         android:title="Medical ID"/>
+    <item
+        android:id="@id/nav_settings"
+        android:icon="@drawable/ic_settings_black_24dp"
+        android:title="Settings"/>
 
 </menu>
