--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
 
 
     <TextView
         android:id="@+id/tv_steps"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="193dp"
+        android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:textSize="18sp" />
-
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_stop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <Button
         android:id="@+id/btn_stop"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Touch to stop the Step Counter Service" />
+        android:layout_width="374dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
+        android:text="Touch to stop the Step Counter Service"
+        app:layout_constraintBottom_toTopOf="@+id/stepinfo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_steps" />
 
     <TextView
         android:id="@+id/stepinfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Stopping the Step Counter Service can conserve battery life, the step counter will stay disabled until it is enabled again." />
+        android:layout_width="374dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="9dp"
+        android:text="Stopping the Step Counter Service can conserve battery life, the step counter will stay disabled until it is enabled again."
+        app:layout_constraintBottom_toTopOf="@+id/sign_out"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_stop" />
 
     <Button
         android:id="@+id/sign_out"
         android:layout_width="139dp"
         android:layout_height="wrap_content"
-        android:text="Sign Out" />
+        android:layout_marginStart="136dp"
+        android:layout_marginLeft="136dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginRight="136dp"
+        android:layout_marginBottom="222dp"
+        android:text="Sign Out"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stepinfo" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
