--- a/app/src/main/res/xml/fragment_settings.xml
+++ b/app/src/main/res/xml/fragment_settings.xml
@@ -1,26 +1,36 @@
+<?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-        android:title="Category 1">
+        android:title="Medical ID">
 
-        <SwitchPreferenceCompat
-            android:key="key1"
-            android:title="Switch Preference"
-            android:summary="Switch Summary"
-            android:defaultValue="true" />
+        <Preference
+            android:key="ChangeMedical"
+            android:title="Update Medical ID"
+            android:summary="Update or remove a previous Medical ID" />
 
-        <EditTextPreference
-            android:key="key2"
-            android:title="EditText Preference"
-            android:summary="EditText Summary"
-            android:dialogMessage="Dialog Message"
-            android:defaultValue="Default value" />
-        <CheckBoxPreference
-            android:key="key3"
-            android:title="CheckBox Preference"
-            android:summary="CheckBox Summary"
-            android:defaultValue="true"/>
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="Step Counter">
+
+        <CheckBoxPreference
+            android:key="UnregisterSensor"
+            android:title="Stop Step Count Tracking"
+            android:summary="This will stop the step counter when the application is closed, saving battery life"
+            android:defaultValue="true"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="Account">
+
+        <Preference
+            android:key="logout"
+            android:title="Sign Out"
+            android:summary="Sign Out of MHA, you will need to sign back in to use the application"/>
+
+
+    </PreferenceCategory>
 </PreferenceScreen>
