--- a/app/src/main/res/layout/framelayout_actionbar.xml
+++ b/app/src/main/res/layout/framelayout_actionbar.xml
@@ -6,7 +6,6 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragment_actionbarmenu"
-        />
+        android:id="@+id/fragment_actionbarmenu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
