--- a/app/src/main/res/xml/fragment_settings.xml
+++ b/app/src/main/res/xml/fragment_settings.xml
@@ -2,6 +2,7 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+
     <PreferenceCategory
         android:title="Medical ID">
 
@@ -13,13 +14,13 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:title="Step Counter">
+        android:title="Diet Tracker">
 
         <CheckBoxPreference
-            android:key="UnregisterSensor"
-            android:title="Stop Step Count Tracking"
-            android:summary="This will stop the step counter when the application is closed, saving battery life"
-            android:defaultValue="true"/>
+            android:key="UnregisterNotification"
+            android:title="Meal Suggestions"
+            android:summary="You will permanently stop receiving meal suggestions when unchecked"
+            android:defaultValue="false"/>
 
     </PreferenceCategory>
 
