--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,15 +48,15 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_stop" />
 
     <Button
-        android:id="@+id/sign_out"
+        android:id="@+id/start_medical"
         android:layout_width="139dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="136dp"
         android:layout_marginLeft="136dp"
         android:layout_marginEnd="136dp"
         android:layout_marginRight="136dp"
-        android:layout_marginBottom="152dp"
-        android:text="Sign Out"
+        android:layout_marginBottom="144dp"
+        android:text="Medical ID"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -70,9 +70,9 @@
         android:layout_marginLeft="136dp"
         android:layout_marginEnd="136dp"
         android:layout_marginRight="136dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="50dp"
         android:text="Calorie Counter"
-        app:layout_constraintBottom_toTopOf="@+id/sign_out"
+        app:layout_constraintBottom_toTopOf="@+id/start_medical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
